<resources>
    <string name="app_name">Avocado_Android</string>
    <string name="toolbar_name">A VOCA DO</string>
    <string name="attendance_check">%d월 출석체크</string>
    <string name="search_here">Search Here</string>
    <string name="best_search">인기 검색어</string>
    <string name="recomend_words">추천 단어</string>
    <string name="search_hint">검색어 입력</string>
    <string name="word_meaning">단어와 그 단어의 의미, 발음, 사용 예시 등을 알파벳 순서로 정리한 책이나 전자 문서.\n\n일반적으로 한 언어에서 사용되는 단어들을 포함하며, 각 단어의 철자, 발음, 의미, 문법 정보, 어원, 동의어, 반의어, 예문 등을 제공한다</string>
    <string name="memorize_word_using_example_sentence">문장을 통해 단어가 사용되는 방식을 알아보세요</string>
    <string name="example_sentence">Example sentence showcasing the usage of the word</string>
    <string name="easy_memorize_word_tip">단어를 쉽게 외울 수 있는 방법에는 무엇이 있을까요?</string>
    <string name="easy_easy_memorize_word_tip_exp">단어와 관련된 이미지를 떠올리거나 상황을 연상하여 기억하는 방법입니다.\n예를 들어, "dictionary"를 "책상 위에 사전이 놓여 있는 모습"으로 연상해 보세요.</string>
    <string name="suffix_desc">"\"dictionary\"라는 단어는 "말하다"라는 의미의 라틴어 "dicere"에서 시작하여 중세 라틴어 "dictionarium" 을 거쳐 현재의 영어 단어가 되었습니다.말하기, 표현이라는 뜻의 어근 ‘diction’과 관련된,장소 또는 물건이라는 뜻의 접미사 ‘-ary’가 합쳐진 단어입니다.</string>
    <string name="same_word_list">유사한 단어</string>
    <string name="same_affix_list">같은 접두사/접미사를 사용한 단어</string>
    <string name="content_not_available_word_mean">내용없음</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">라이브러리</string>

    <string name="chatbot_answer_last">또 궁금하신 내용이 있으신가요?</string>
    <string name="chatbot_answer_null">아보카가 길을 잃었어요! 다른 단어를 검색해주세요</string>
    <string name="chatbot_which_word">어떤 단어를 검색해 드릴까요?</string>
    <string name="chatbot_meaning">뜻이 궁금한 단어가 있어!</string>
    <string name="chatbot_similar">이 단어에 유사 단어가\n있는지 궁금해!</string>
    <string name="chatbot_etymology">어원으로 단어를 분류해줘!</string>
    <string name="chatbot_tips">외우기 어려운 단어의\n외우기 팁을 알려줘!</string>

    <string name="chatbot_tip_card_title1">1. 옛연상 기억법:</string>
    <string name="chatbot_tip_card_title2">2. 단어 분해:</string>
    <string name="chatbot_tip_card_title3">3. 반복 학습:</string>
    <string name="chatbot_tip_card_title4">4. 스토리텔링:</string>
    <string name="chatbot_tip_card_desc1">단어와 관련된\n이미지를  떠올려 보세요.</string>
    <string name="chatbot_tip_card_desc2">발음에 따라 단어를\n분해해 보세요.\n단어를 발음해보면\n 더 쉽게 외울 수 있어요!</string>
    <string name="chatbot_tip_card_desc3">여러 번 소리 내어 발음해 보고,\n손으로 여러 번 써보세요.</string>
    <string name="chatbot_tip_card_desc4">간단한 이야기를 만들어 보세요.\n예를 들어, &quot;애플(Apple) 회사에서\n사과(apple)를 만든다&quot;\n같은 간단한 이야기를 떠올리면\n더 쉽게 기억할 수 있습니다.</string>

</resources>